# Graphics-hw

./: README.md
hand/: 说明.md
hand/Debug/: Gesture.txt  Hand.exp  Hand.lib
hand/src/: CMakeLists.txt  SOIL.lib  hierarchy.txt  main - 副本.cpp  main copy.cpp  main.cpp  skeletal_mesh.h  texture_image.h
particle/: CMakeLists.txt  说明.md
particle/Debug/: imgui.ini
particle/src/: CMakeLists.txt  Camera.h  game_object.h  light.h  main - 副本 (2).cpp  main copy 2.cpp  main.cpp  main_stable.cpp  note.txt  original_shader.txt  particle_generator.cpp  particle_generator.h  resource_manager.cpp  sprite_renderer.cpp  sprite_renderer.h  texture_image.h  说明.md
particle/src/shaders/: particle.frag  particle.vs  sprite.vs
